# learning_computer_visioin

learning_computer_vision_machine_learning_with_opencv/: README.md
learning_computer_vision_machine_learning_with_opencv/ch01_feature_detection/notebooks/: chpater01_feature_detection.ipynb  corner_detection_cpp11.ipynb
learning_computer_vision_machine_learning_with_opencv/ch01_feature_detection/src/contours_detection/: contours_detection.cpp
learning_computer_vision_machine_learning_with_opencv/ch01_feature_detection/src/corner_detection/: CMakeLists.txt  corner_detection.cpp
learning_computer_vision_machine_learning_with_opencv/image/: README.md
